crates/wdl-grammar/tests/parsing/enums-invalid-variant/source.errors
error: expected enum choice declaration, but found `=`
  ┌─ tests/parsing/enums-invalid-variant/source.wdl:7:5
  │
7 │     = 1,
  │     ^ unexpected `=`

error: expected expression, but found `,`
   ┌─ tests/parsing/enums-invalid-variant/source.wdl:13:14
   │
13 │     Pending =,
   │              ^ unexpected `,`

